package baseNoStates;

import org.slf4j.Logger;
import org.slf4j.LoggerFactory;

public final class Loggers {
  public static final Logger logger1 = LoggerFactory.getLogger("milestone1.Webserver");
  public static final Logger logger2 = LoggerFactory.getLogger("milestone2.Webserver");
}
