@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class Webserver {
    - {static} PORT :int
    - {static} FORMATTER : DateTimeFormatter
    + Webserver()
}

class SocketThread {
    - insocked : Socked
    - makeRequest(tokens : String[]) : Request
    - makeRequestReader(tokens : String[]) : RequestReader
    - makeRequestArea(tokens : String[]) : RequestArea
    - makeHeaderAnswer() : String
    - makeJsonAnswer(request : Request) : String
    + run()
}

Webserver +-right- SocketThread

note right of SocketThread
inner class
of Webserver
end note

class DirectoryAreas {
    - {static} rootArea : Area
    - {static} allDoors : Door[]
    + {static} makeAreas()
    + {static} findDoorById(id : String) : Door
    + {static} acceptTreeVisitor(visitor : AreaVisitor)
}

DirectoryAreas *--> "1" Area : "rootArea"

abstract class Area {
    - id : String
    # {abstract} processVisitor(visitor : AreaVisitor)
    + acceptVisitor(visitor : AreaVisitor)
}

class Partition extends Area {
    - subareas : Area[]
    + getSubareas(newArea : Area) : Space[]
    + addArea(newArea : Area)
    # processVisitor(visitor : AreaVisitor)
}

Partition *--> "1..*" Area : "subareas"

class Space extends Area {
    - doorsGivingAccess : Door[]
    + getDoorsGivingAccess() : Door[]
    + addDoor(newDoor : Door)
    # processVisitor(visitor : AreaVisitor)
}

Space *--> "1..*" Door : "doorsGivingAccess"

class Door {
    - id : String
    - state : DoorState
    - spaceComingFrom : Space
    - spaceLeadingTo : Space
    - timerStart : LocalDateTime
    + Door(id : String, spaceComingFrom : Space, spaceLeadingTo : Space)
    + processRequest(request : RequestReader)
    - doAction(action : String)
    + toJson() : JSONObject
    + updateFromTimer()
}

Door *--> "1" DoorState.DoorState : "state"

class Clock {
    - {static} timer : Timer
    - {static} observers : Door[]
    + {static} start()
    + {static} addObservers(doors : Door[])
}

Clock o--> "1..*" Door : observers


class DirectoryUserGroups {
    - {static} userGroups : UserGroup[]
    + {static} makeUserGroups()
    + {static} findUserByCredential(credential : String) : User
}

DirectoryUserGroups *--> "1..*" UserGroup : "userGroups"

class UserGroup {
    - users : User[]
    - privileges : Privileges
    + findUserByCredential(credential : String) : User
    + canSendRequests(now : localDateTime) : boolean
    + canBeInSpace(space : Space) : boolean
    + canDoAction(action : String) : boolean
}

UserGroup *--> "1..*" User : users

class User {
    - name : String
    - credential : String
    - userGroup : UserGroup
    + User(name: String, credential: String)
    + toString() : String
    + canSendRequests(now : localDateTime) : boolean
    + canBeInSpace(space : Space) : boolean
    + canDoAction(action : String) : boolean
}

UserGroup *--> "1" Privileges.Privileges : privileges


class Main {
    + {static} main(args : String)
}

class Loggers {
    + {static} logger1 : Logger
    + {static} logger2 : Logger
}

note right of Main::main
    DirectoryAreas.makeAreas()
    DiretoryUserGroups.makeUserGroups()
    Clock.start()
    new Webserver()
end note

Main -[hidden]down- Webserver
Webserver -[hidden]down- DirectoryAreas
DirectoryAreas -[hidden]right- DirectoryUserGroups
Clock -[hidden]left- Door


package "DoorState" {
    abstract class "DoorState"
}

package Privileges {
    abstract class "Privileges"
}

package AreaVisitors {
    interface "AreaVisitor"
}

Area --> AreaVisitors.AreaVisitor

@enduml
